Fix overlap transaction back button bug

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,9 +3,9 @@ body {
     font-family: sans-serif;
 }
 
-/** {
+* {
     border: solid 1px black;
-}*/
+}
 
 .image {
     background-image: url(images/box.png);
